# repo_summarizer

./: .env.example  .gitignore  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  test_package.py
src/repo_summarizer/: __init__.py  main.py
